# zettelkasten-gtk

./: .gitignore  README.md  com.github.kralabenjamin.zettelkasten  com.github.kralabenjamin.zettelkasten.json  com.github.snowparrot.zettelkasten  install.sh  meson.build  readme.md  template.md
build-aux/: python3-GitPython.json
data/: com.github.kralabenjamin.zettelkasten.desktop.in  com.github.kralabenjamin.zettelkasten.gschema.xml  com.github.kralabenjamin.zettelkasten.metainfo.xml.in  com.github.kralabenjamin.zettelkasten.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: Application.css  EditWindow.py  MainWindow.py  NoZettelFoundDialog.py  SearchContainer.py  SearchResultView.py  SearchResultsView.py  Settings.py  StatisticContainer.py  Theme.py  Zettel.py  ZettelDataService.py  ZettelSortingMethods.py  ZettelWindow.py  ZettelkastenConfig.py  main.py  meson.build  settings.py  window.py  window.ui  zettelkasten-flatpak.gresource.xml  zettelkasten-flatpak.in
tests/: test_Zettel.py
unittests/: test_Zettel.py
